--- a/barrel_n_bond_backend/netlify.toml
+++ b/barrel_n_bond_backend/netlify.toml
@@ -1,8 +1,7 @@
 [build]
-  command = "npm run build" # or "npm i" if no build step
-  publish = "dist"          # optional if you have a static site
+  command = "npm install" 
+  functions = "netlify/functions"
 
 [functions]
-  directory = "netlify/functions"
   node_bundler = "esbuild"
   included_files = ["src/**"]
