--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command = "npm install" 
+  command = "echo 'skip build'"
   functions = "netlify/functions"
 
 [functions]
   node_bundler = "esbuild"
-  included_files = ["src/**"]
+  included_files = ["netlify/functions/_lib/**"]
