--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "netlify deploy --prod"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.600.0",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
