--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "netlify-cli": "^17.34.0"
