--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
+    "@google/generative-ai": "^0.24.1",
     "node-fetch": "^2.7.0",
     "pdf-lib": "^1.17.1",
     "sharp": "^0.33.2"
